--- a/lesgo.html
+++ b/lesgo.html
@@ -10,7 +10,7 @@
 
 		<p>parágrafo <b>etc etc</b> blablabla</p>
 
-		<a href="https://www.youtube.com/" target="_blank" title="Vamo pro YouTube">Clica aqui disgrama</a>
+		<a href="https://www.youtube.com/watch?v=f7riRtByBy0" target="_blank" title="Vamo pro YouTube">Clica aqui disgrama</a>
 
 		<p>	b = <b>negrito</b><br>
 		i = <i>itálico</i>
